force-app/main/default/objects/RazorpayPaymentTransaction__c/RazorpayPaymentTransaction__c.object-meta.xml
<CustomObject>
    <description>This object will store the attendees&apos; payment information when they register for the event.</description>
    <label>Razorpay Payment Transaction</label>
    <nameField>
        <displayFormat>PAYMENT-{000000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Razorpay Payment Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>