force-app/main/default/objects/RazorpayPaymentTransaction__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount of payment or refund</description>
    <inlineHelpText>Amount of payment or refund</inlineHelpText>
    <label>Amount</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>