force-app/main/default/objects/RazorpayPaymentTransaction__c/fields/ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>ApprovedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Records who approved the refund</description>
    <inlineHelpText>The user who approved refund</inlineHelpText>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Razorpay_Payment_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>