force-app/main/default/objects/RazorpayPaymentTransaction__c/fields/Event_Registration__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Registration</label>
    <referenceTo>Event_Attendee__c</referenceTo>
    <relationshipLabel>Razorpay Payment Transactions</relationshipLabel>
    <relationshipName>Razorpay_Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>