force-app/main/default/objects/RazorpayPaymentTransaction__c/fields/Gateway_Response__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Response__c</fullName>
    <description>Complete gateway response for debugging</description>
    <inlineHelpText>Raw response from the gateway</inlineHelpText>
    <label>Gateway Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>