force-app/main/default/objects/RazorpayPaymentTransaction__c/fields/GatewayErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>GatewayErrorMessage__c</fullName>
    <description>Specific error message from the gateway</description>
    <inlineHelpText>Error details if the transaction fails</inlineHelpText>
    <label>Gateway Error Message</label>
    <type>TextArea</type>
</CustomField>