force-app/main/default/objects/RazorpayPaymentTransaction__c/fields/InitiatedBy__c.field-meta.xml
<CustomField>
    <fullName>InitiatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who initiated the refund</description>
    <inlineHelpText>The user who initiated the refund</inlineHelpText>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Razorpay_Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>