force-app/main/default/objects/RazorpayPaymentTransaction__c/fields/Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Amount__c</fullName>
    <description>The full amount of the original payment</description>
    <inlineHelpText>Original transaction amount</inlineHelpText>
    <label>Original Amount</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>