force-app/main/default/objects/RazorpayPaymentTransaction__c/fields/Parent_Payment__c.field-meta.xml
<CustomField>
    <fullName>Parent_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Required for refunds - links to the original payment</description>
    <inlineHelpText>Reference to the original payment</inlineHelpText>
    <label>Parent Payment</label>
    <referenceTo>RazorpayPaymentTransaction__c</referenceTo>
    <relationshipLabel>Related Refund Records</relationshipLabel>
    <relationshipName>RelatedRefunds</relationshipName>
    <type>Lookup</type>
</CustomField>