force-app/main/default/objects/RazorpayPaymentTransaction__c/fields/ProcessorName__c.field-meta.xml
<CustomField>
    <fullName>ProcessorName__c</fullName>
    <description>Payment gateway/processor used</description>
    <inlineHelpText>Payment processor used</inlineHelpText>
    <label>Processor Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>RazorPay</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>Authorize.Net</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>