force-app/main/default/objects/RazorpayPaymentTransaction__c/fields/RefundReason__c.field-meta.xml
<CustomField>
    <fullName>RefundReason__c</fullName>
    <description>Why the refund was issued</description>
    <inlineHelpText>Reason for refund</inlineHelpText>
    <label>Refund Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Double Charge</fullName>
            </value>
            <value>
                <fullName>Event Cancelled</fullName>
            </value>
            <value>
                <fullName>Partial Cancellation</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>