force-app/main/default/objects/RazorpayPaymentTransaction__c/fields/RefundType__c.field-meta.xml
<CustomField>
    <fullName>RefundType__c</fullName>
    <description>Whether full or partial refund</description>
    <inlineHelpText>Type of refund</inlineHelpText>
    <label>Refund Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Refund</fullName>
            </value>
            <value>
                <fullName>Partial Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>