force-app/main/default/objects/RazorpayPaymentTransaction__c/fields/RemainingAmount__c.field-meta.xml
<CustomField>
    <fullName>RemainingAmount__c</fullName>
    <description>Original amount minus refunded amount</description>
    <formula>Original_Amount__c -  Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount available for refund</inlineHelpText>
    <label>Remaining Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>