force-app/main/default/objects/RazorpayPaymentTransaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of transaction</description>
    <inlineHelpText>Current status of transaction</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Partially Refunded</fullName>
            </value>
            <value>
                <fullName>Fully Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>