force-app/main/default/objects/RazorpayPaymentTransaction__c/fields/TotalRefundedAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalRefundedAmount__c</fullName>
    <description>The total amount refunded from this payment</description>
    <inlineHelpText>The sum of all refund records</inlineHelpText>
    <label>Total Refunded Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>