force-app/main/default/objects/RazorpayPaymentTransaction__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <description>When payment/refund was processed</description>
    <inlineHelpText>Date and time of transaction</inlineHelpText>
    <label>Transaction Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>