force-app/main/default/objects/RazorpayPaymentTransaction__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description>Unique identifier from payment gateway</description>
    <externalId>true</externalId>
    <inlineHelpText>Gateway transaction reference</inlineHelpText>
    <label>Transaction ID</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>