force-app/main/default/objects/RazorpayPaymentTransaction__c/recordTypes/Payment.recordType-meta.xml
<RecordType>
    <fullName>Payment</fullName>
    <active>true</active>
    <description>Used for recording payment transactions</description>
    <label>Payment</label>
</RecordType>