force-app/main/default/objects/RazorpayPaymentTransaction__c/recordTypes/Refund.recordType-meta.xml
<RecordType>
    <fullName>Refund</fullName>
    <active>true</active>
    <description>Used for recording full or partial refund transactions</description>
    <label>Refund</label>
</RecordType>