force-app/main/default/objects/RazorpayPaymentTransaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Original_Amount__c</columns>
    <columns>Transaction_ID__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Event_Registration__c</columns>
    <columns>RemainingAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>